@startuml

title __SERVICES's Class Diagram__\n

  package com.koltunm.skanner {
    package com.koltunm.skanner.services {
      class ArticleFetcher {
          - query : String
          - from : LocalDate
          - to : LocalDate
          - interval : int
          - pageSize : int
          - loadImages : boolean
          + ArticleFetcher()
          + ArticleFetcher()
          - init()
          # call()
      }
    }
  }
  

  package com.koltunm.skanner {
    package com.koltunm.skanner.services {
      class FetcherForm {
          - from : LocalDate
          - to : LocalDate
          - interval : int
          - pageSize : int
          - groupingRange : int
          - query : String
          - tickerSymbol : String
          + FetcherForm()
          + getFrom()
          + getTo()
          + getInterval()
          + getPageSize()
          + getQuery()
          + getTickerSymbol()
          + getGroupingRange()
      }
    }
  }
  

  package com.koltunm.skanner {
    package com.koltunm.skanner.services {
      class SentimentAnalyser {
          - list : List<SentimentAnalyzable>
          - threadPoolExecutor : ThreadPoolExecutor
          + SentimentAnalyser()
          # call()
      }
    }
  }
  

  package com.koltunm.skanner {
    package com.koltunm.skanner.services {
      class ServiceCallBack {
          - runningServices : int
          + ServiceCallBack()
          + registerService()
          + worksDone()
          - isComplete()
          - incrementServiceCount()
          - decrementServiceCount()
      }
    }
  }
  

  package com.koltunm.skanner {
    package com.koltunm.skanner.services {
      class StockDataFetcher {
          - tickerSymbol : String
          - from : LocalDate
          - to : LocalDate
          + StockDataFetcher()
          # call()
      }
    }
  }
  

  package com.koltunm.skanner {
    package com.koltunm.skanner.services {
      class TwitterFetcher {
          - twitter : Twitter
          - tweetsPerRequest : int
          - queryString : String
          - from : LocalDate
          - to : LocalDate
          - interval : int
          - minLimit : int
          - secLimit : int
          + TwitterFetcher()
          # call()
          - getTweets()
      }
    }
  }
  

  ArticleFetcher -up-|> Task
  ArticleFetcher o-- NewsClient : client
  TaskCallable -up-|> Callable
  SentimentAnalyser -up-|> Task
  TaskCallable -up-|> Callable
  ServiceCallBack o-- UIAction : action
  StockDataFetcher -up-|> Task
  StockDataFetcher o-- FinanceInterval : interval
  TaskCallable -up-|> Callable
  TwitterFetcher -up-|> Task
  TwitterFetcher o-- RequestLimiter : limiter
  TaskCallable -up-|> Callable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
